syntax = "proto3";

option csharp_namespace = "SecondaryServer.Protos";

package bid;

service BidService {
  rpc CreateBid (CreateBidRequest) returns (CreateBidResponse);
}

message CreateBidRequest {
  int32 buyerId = 1;
  int32 propertyId = 2;
  double amount = 3;
  string expiryDate = 4;
}

message CreateBidResponse {
  int32 bidId = 1;
  bool success = 2;
  string message = 3;
}

